--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
             </div>
         </header>
         <main>
-            <img id="dots-one" src="./img/dots.png" alt="dots">
+
+            <div id="icons-contact">
+                <ul>
+                    <li><a href="https://github.com/asullyy" target="_blank"><img src="./img/icons/github-icon.png" alt=""></a></li>
+                    <li><a href="mailto:sulianyy@gmail.com" target="_blank"><img src="./img/icons/gmail-icon.png" alt=""></a></li>
+                    <li><a href="https://www.linkedin.com/in/sulliany-souzaa/" target="_blank"><img src="./img/icons/linkdin-icon.png" alt=""></a></li>
+                </ul>
+                <img src="./img/icons/barra.png" alt="">
+            </div>
+
+
+            </main><img id="dots-one" src="./img/dots.png" alt="dots">
             <section class="welcome" id="welcome">
                 <h1>Karen Silva</h1>
                 <h2>Frontend Engineer</h2>
@@ -33,8 +44,8 @@
             </section>
             <section class="about-me" id="about-me">
                 <h2>About my academic background...</h2>
-                <p>I have a degree in Computer Science from the Federal University of Pará and in recent years I have dedicated myself to learning tools, languages ​​and concepts used in the frontend world</p>
-                <p>At the moment I've concrete knowledge in HTML, CSS, JavaScript and React. My other passion after programming is design, so I really like to design my own interfaces, for this reason I've some knowledge in UI|UX tools.</p>
+                <p id="about-me-p1">I have a degree in Computer Science from the Federal University of Pará and in recent years I have dedicated myself to learning tools, languages ​​and concepts used in the frontend world</p>
+                <p id="about-me-p2">At the moment I've concrete knowledge in HTML, CSS, JavaScript and React. My other passion after programming is design, so I really like to design my own interfaces, for this reason I've some knowledge in UI|UX tools.</p>
             </section>
             <section class="experiences" id="experiences">
 
@@ -42,6 +53,7 @@
             <section class="projects" id="projects">
 
             </section>
+            
             <!--javaScript-->
             <ul id="BackgroundAnimation-top">
             </ul>
@@ -51,7 +63,6 @@
             </ul>
             <ul id="BackgroundAnimation-left">
             </ul>
-        </main>
         <footer>
 
         </footer>
