--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     <li><a href="index.html">Welcome</a></li>
                     <li><a href="#arrow-welcome">About Me</a></li>
                     <li><a href="#arrow-aboutMe">Stacks</a></li>
-                    <li><a href="#experiences">Experiences</a></li>
-                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#arrow-stacks">Experiences</a></li>
+                    <li><a href="#arrow-experiences">Projects</a></li>
                 </ul>
             </nav>
             <!--Já esse botão fica estático na página e pode ser acionado a qualquer momento pelo user-->
@@ -58,85 +58,80 @@
         </section>
         <section class="Stacks" id="stacks">
             <h3>My Stacks</h3>
-            <div>
-                <ul>
-                    <li>
-                     <img src="" alt="html icon">
-                     <h4>html|css</h4>
-                     <p>(advanced)</p>
-                    </li>
-                    <li>
-                     <img src="" alt="javaScript icon">
-                     <h4>JavaScript</h4>
-                     <p>(basic)</p>
-                    </li>
-                    <li>
-                     <img src="" alt="react icon">
-                     <h4>React</h4>
-                     <p>(basic)</p>
-                    </li> 
-                 </ul>
-            </div>
-            <div>
-                <ul>
-                    <li>
-                     <img src="" alt="css icon">
-                     <h4>Media Queries</h4>
-                     <p>(basic)</p>
-                    </li>
-                    <li>
-                     <img src="" alt="css icon">
-                     <h4>Flexbox</h4>
-                     <p>(advanced)</p>
-                    </li>
-                    <li>
-                     <img src="" alt="tool icon">
-                     <h4>Figma</h4>
-                    </li> 
-                 </ul>
-            </div>
-            <div>
-                <ul>
-                    <li>
-                     <img src="" alt="Github icon">
-                     <h4>Github</h4>
-                     <p>(intermediate)</p>
-                    </li>
-                    <li>
-                     <img src="" alt="Python icon">
-                     <h4>Pyhton</h4>
-                     <p>(intermediate)</p>
-                    </li>
-                    <li>
-                     <img src="" alt="tool icon">
-                     <h4>Scrum</h4>
-                    </li> 
-                 </ul>
+            <div id="stacks-list">
+                <div>
+                    <ul>
+                        <li>
+                         <img src="./img/icons/html-icon.png" alt="html-icon">
+                         <h4>HTML|CSS</h4>
+                        </li>
+                        <li><p>(advanced)</p></li>
+                        <li>
+                         <img src="./img/icons/js-icon.png" alt="javaScript icon">
+                         <h4>JavaScript</h4>                    </li>
+                        <li>
+                         <p>(basic)</p>
+                        </li>
+                        <li>
+                         <img src="./img/icons/react-icon.png" alt="react icon">
+                         <h4>React</h4>
+                        </li> 
+                        <li><p>(basic)</p></li>
+                     </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li>
+                         <img src="./img/icons/css-icon.png" alt="css icon">
+                         <h4>Media Queries</h4>
+                        </li>
+                        <li><p>(basic)</p></li>
+                        <li>
+                         <img src="./img/icons/css-icon.png" alt="css icon">
+                         <h4>Flexbox</h4>
+                        </li>
+                        <li><p>(advanced)</p></li>
+                        <li>
+                         <img src="./img/icons/tools-icon.png" alt="tool icon">
+                         <h4>Figma</h4>
+                        </li> 
+                     </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li>
+                         <img src="./img/icons/github-icon.png" alt="Github icon">
+                         <h4>Github</h4>
+                        </li>
+                        <li><p>(intermediate)</p></li>
+                        <li>
+                         <img src="./img/icons/python-icon.png" alt="Python icon">
+                         <h4>Pyhton</h4>
+                        </li>
+                        <li><p>(intermediate)</p></li>
+                        <li>
+                         <img src="./img/icons/tools-icon.png" alt="tool icon">
+                         <h4>Scrum</h4>
+                        </li> 
+                     </ul>
+                </div>
             </div>
             <p class="pLeft">I have other stacks with games and other programming languages. But, those are the main stacks I've been working on</p>
+            <div class="arrow-down" id="arrow-stacks"><a href="#arrow-stacks"><i class="bi bi-caret-down-fill"></i></a></div>
         </section>
         <section class="Experiences" id="experiences">
             <h3>My experiences</h3>
             <p class="pLeft">I still don't have professional experience with front-end development, but I acquired my experiences building projects that will be shown in the next section :)</p>
             <p class="pRight">I have three professional experiences in other areas of IT, you can check my resume by clicking here or through my linkdIn</p>
-            <div class="arrow-down"><a href="#aboutMe"><i class="bi bi-caret-down-fill"></i></a></div>
+            <div class="arrow-down" id="arrow-experiences"><a href="#arrow-experiences"><i class="bi bi-caret-down-fill"></i></a></div>
         </section>
         <section class="Projects" id="projects">
-            <div id="img-project">
-                <img src="" alt="">
-            </div>
-            <div class="details-project">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium odio nisi aliquam dolores sapiente! Voluptatem facilis molestias commodi libero vero reiciendis. Perspiciatis, delectus? Obcaecati nihil beatae, debitis quia unde id.</p>
-                <img src="" alt="github icon ">
-                <img src="" alt="acess icon">
-            </div>
-            <div id="img-project">
-                <img src="" alt="">
-            </div>
-            <div class="details-project">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium odio nisi aliquam dolores sapiente! Voluptatem facilis molestias commodi libero vero reiciendis. Perspiciatis, delectus? Obcaecati nihil beatae, debitis quia unde id.</p>
-                <img src="" alt="github icon ">
-                <img src="" alt="acess icon">
+            <h3>My Projects</h3>
+            <div class="card-project1">
+                <div class="image-card">
+                    <img src="./img/em-construção.png" alt="">
+                </div>
+                <h4>This section is under construction</h4>
             </div>
         </section>
 
@@ -151,7 +146,7 @@
         </ul>
     </main>
     <footer>
-        <h3>Contact-ME</h3>
+        <!-- <h3>Contact-ME</h3>-->
     </footer>
     <script src="./js/nav-mobile.js"></script>
     <script src="./js/animacao-background.js"></script>
