--- a/index.html
+++ b/index.html
@@ -127,14 +127,75 @@
         </section>
         <section class="Projects" id="projects">
             <h3>My Projects</h3>
-            <div class="card-project1">
-                <div class="image-card">
-                    <img src="./img/em-construção.png" alt="">
+            <div class="show-projects">
+                <div class="arrow-card-left control"><i class="bi bi-chevron-double-left"></i></div>
+                <div class="arrow-card-right control"><i class="bi bi-chevron-double-right"></i></div>
+                <div class="container-projects">
+                    <div class="container-cards-list">
+                        <div class="container-card current-item">
+                            <div class="background-card">
+                                <div class="image-card"></div>
+                            </div>
+                            <h4>Math Play</h4>
+                            <p class="pCard">
+                                It is a mathematical game for android and have three levels
+                                <br><br>
+                                <i class="bi bi-github"><link rel="stylesheet" href="https://github.com/asullyy/APP-MATHPLAY.git"></i>
+                                <i class="bi bi-box-arrow-up-right"><link rel="stylesheet" href="https://github.com/asullyy/APP-MATHPLAY.git"></i>
+                            </p>                            
+                        </div>
+                        <div class="container-card">
+                            <div class="background-card">
+                                <div class="image-card"></div>
+                            </div>
+                            <h4>Project 2</h4>
+                            <p class="pCard">
+                                coming soon
+                                <br><br>
+                                <i class="bi bi-github"></i>
+                                <i class="bi bi-box-arrow-up-right"></i>
+                            </p>  
+                        </div>
+                        <div class="container-card">
+                            <div class="background-card">
+                                <div class="image-card"></div>
+                            </div>
+                            <h4>Project 3</h4>
+                            <p class="pCard">
+                                Coming soon
+                                <br><br>
+                                <i class="bi bi-github"></i>
+                                <i class="bi bi-box-arrow-up-right"></i>
+                            </p>  
+                        </div>
+                        <div class="container-card">
+                            <div class="background-card">
+                                <div class="image-card"></div>
+                            </div>
+                            <h4>Project 4</h4>
+                            <p class="pCard">
+                                Coming soon
+                                <br><br>
+                                <i class="bi bi-github"></i>
+                                <i class="bi bi-box-arrow-up-right"></i>
+                            </p>  
+                        </div>
+                        <div class="container-card">
+                            <div class="background-card">
+                                <div class="image-card"></div>
+                            </div>
+                            <h4>Project 5</h4>
+                            <p class="pCard">
+                                Coming soon
+                                <br><br>
+                                <i class="bi bi-github"></i>
+                                <i class="bi bi-box-arrow-up-right"></i>
+                            </p>  
+                        </div>
+                    </div>
                 </div>
-                <h4>This section is under construction</h4>
             </div>
         </section>
-
         <!--javaScript-->
         <ul id="BackgroundAnimation-top">
         </ul>
@@ -146,9 +207,10 @@
         </ul>
     </main>
     <footer>
-        <!-- <h3>Contact-ME</h3>-->
+        
     </footer>
     <script src="./js/nav-mobile.js"></script>
     <script src="./js/animacao-background.js"></script>
+    <script src="./js/projects-slider.js"></script>
 </body>
 </html>
