--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="container-cards-list">
                         <div class="container-card current-item">
                             <div class="background-card">
-                                <div class="image-card"></div>
+                                <div class="image-card" id="card-1"></div>
                             </div>
                             <h4>Math Play</h4>
                             <p class="pCard">
@@ -146,7 +146,7 @@
                         </div>
                         <div class="container-card">
                             <div class="background-card">
-                                <div class="image-card"></div>
+                                <div class="image-card" id="card-2"></div>
                             </div>
                             <h4>Project 2</h4>
                             <p class="pCard">
@@ -158,7 +158,7 @@
                         </div>
                         <div class="container-card">
                             <div class="background-card">
-                                <div class="image-card"></div>
+                                <div class="image-card" id="card-3"></div>
                             </div>
                             <h4>Project 3</h4>
                             <p class="pCard">
@@ -170,7 +170,7 @@
                         </div>
                         <div class="container-card">
                             <div class="background-card">
-                                <div class="image-card"></div>
+                                <div class="image-card" id="card-4"></div>
                             </div>
                             <h4>Project 4</h4>
                             <p class="pCard">
