--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                             <p class="pCard">
                                 It is a mathematical game for android and have three levels
                                 <br><br>
-                                <i class="bi bi-github"><link rel="stylesheet" href="https://github.com/asullyy/APP-MATHPLAY.git"></i>
-                                <i class="bi bi-box-arrow-up-right"><link rel="stylesheet" href="https://github.com/asullyy/APP-MATHPLAY.git"></i>
+                                <a href="https://github.com/asullyy/APP-MATHPLAY.git" target="_blank"><i class="bi bi-box-arrow-up-right"></i></a>
+                                <a href="https://github.com/asullyy/APP-MATHPLAY.git" target="_blank"><i class="bi bi-github"></i></a>
                             </p>                            
                         </div>
                         <div class="container-card">
@@ -152,8 +152,8 @@
                             <p class="pCard">
                                 coming soon
                                 <br><br>
-                                <i class="bi bi-github"></i>
-                                <i class="bi bi-box-arrow-up-right"></i>
+                                <a href="https://github.com/asullyy/APP-MATHPLAY.git" target="_blank"><i class="bi bi-box-arrow-up-right"></i></a>
+                                <a href="https://github.com/asullyy/APP-MATHPLAY.git" target="_blank"><i class="bi bi-github"></i></a>
                             </p>  
                         </div>
                         <div class="container-card">
@@ -164,8 +164,8 @@
                             <p class="pCard">
                                 Coming soon
                                 <br><br>
-                                <i class="bi bi-github"></i>
-                                <i class="bi bi-box-arrow-up-right"></i>
+                                <a href="https://github.com/asullyy/APP-MATHPLAY.git" target="_blank"><i class="bi bi-box-arrow-up-right"></i></a>
+                                <a href="https://github.com/asullyy/APP-MATHPLAY.git" target="_blank"><i class="bi bi-github"></i></a>
                             </p>  
                         </div>
                         <div class="container-card">
@@ -176,20 +176,20 @@
                             <p class="pCard">
                                 Coming soon
                                 <br><br>
-                                <i class="bi bi-github"></i>
-                                <i class="bi bi-box-arrow-up-right"></i>
+                                <a href="https://github.com/asullyy/APP-MATHPLAY.git" target="_blank"><i class="bi bi-box-arrow-up-right"></i></a>
+                                <a href="https://github.com/asullyy/APP-MATHPLAY.git" target="_blank"><i class="bi bi-github"></i></a>
                             </p>  
                         </div>
                         <div class="container-card">
                             <div class="background-card">
-                                <div class="image-card"></div>
+                                <div class="image-card" id="card-5"></div>
                             </div>
                             <h4>Project 5</h4>
                             <p class="pCard">
                                 Coming soon
                                 <br><br>
-                                <i class="bi bi-github"></i>
-                                <i class="bi bi-box-arrow-up-right"></i>
+                                <a href="https://github.com/asullyy/APP-MATHPLAY.git" target="_blank"><i class="bi bi-box-arrow-up-right"></i></a>
+                                <a href="https://github.com/asullyy/APP-MATHPLAY.git" target="_blank"><i class="bi bi-github"></i></a>
                             </p>  
                         </div>
                     </div>
@@ -197,17 +197,22 @@
             </div>
         </section>
         <!--javaScript-->
-        <ul id="BackgroundAnimation-top">
-        </ul>
-        <ul id="BackgroundAnimation-bottom">
-        </ul>
-        <ul id="BackgroundAnimation-right">
-        </ul>
-        <ul id="BackgroundAnimation-left">
-        </ul>
+        <ul id="BackgroundAnimation-top"></ul>
+        <ul id="BackgroundAnimation-bottom"></ul>
+        <ul id="BackgroundAnimation-right"></ul>
+        <ul id="BackgroundAnimation-left"></ul>
     </main>
     <footer>
-        
+       <p id="main-footer">Designed & Built by Karen Silva</p>
+       <ul>
+        <li>
+            <a href="https://www.figma.com/file/NJQnAuOh04NduHghrjsP9j/novo-design-portf%C3%B3lio?node-id=0%3A1&t=WFi7QWzgOQDGXH26-1" target="_blank"><i class="bi bi-folder2-open"></i></a>
+        </li>
+        <li>
+            <a href="https://github.com/asullyy/KarenSilva.git" target="_blank"><i class="bi bi-code-slash"></i></a>
+            
+        </li>
+       </ul>
     </footer>
     <script src="./js/nav-mobile.js"></script>
     <script src="./js/animacao-background.js"></script>
